Se creo una practica para calcular el area de un triangulo

--- a/Practica3/Templates/Index.html
+++ b/Practica3/Templates/Index.html
@@ -12,41 +12,55 @@
     />
   </head>
   <body>
-        <h1 class="text-center mt-2">Área del triangulo</h1>
-        <div class="container">
-            <div class="jumbotron mt-3">
-               <div class="row">
-                   <div class="col-12">
-                     <div class="form-group">
-                       <label for="">Ingresa la base del triangulo</label>
-                       <input id="bases" type="number" class="form-control" placeholder="Digita la base del triangulo">
-                   </div>
-               </div>
-               </div> 
-
-               <div class="row">
-                   <div class="col-12">
-                     <div class="form-group">
-                       <label for="">Ingresa la altura del triangulo</label>
-                       <input id="alturas" type="number" class="form-control" placeholder="Digita la altura del triangulo">
-                   </div>
-               </div>
-               </div>
-               
-               <div class="row">
-                 <div class="col-12">
-                   <div id="boton" class="btn btn-outline-info btn-block">Calcular área</div>
-                 </div>
-               </div>
-
-               <div id="ImprimirResultado" class="alert alert-primary mt-3" role="alert">
-                  Resultado del área del triangulo
-               </div>
-                
+    <h1 class="text-center mt-2">Área del triangulo</h1>
+    <div class="container">
+      <div class="jumbotron mt-3">
+        <div class="row">
+          <div class="col-12">
+            <div class="form-group">
+              <label for="">Ingresa la base del triangulo</label>
+              <input
+                id="bases"
+                type="number"
+                class="form-control"
+                placeholder="Digita la base del triangulo"
+              />
             </div>
+          </div>
         </div>
 
-        <script src="./../JAVASCRIPT/Javascript.js"></script>
+        <div class="row">
+          <div class="col-12">
+            <div class="form-group">
+              <label for="">Ingresa la altura del triangulo</label>
+              <input
+                id="alturas"
+                type="number"
+                class="form-control"
+                placeholder="Digita la altura del triangulo"
+              />
+            </div>
+          </div>
+        </div>
 
+        <div class="row">
+          <div class="col-12">
+            <div id="boton" class="btn btn-outline-info btn-block">
+              Calcular área
+            </div>
+          </div>
+        </div>
+
+        <div
+          id="ImprimirResultado"
+          class="alert alert-primary mt-3"
+          role="alert"
+        >
+          Resultado del área del triangulo
+        </div>
+      </div>
+    </div>
+
+    <script src="./../JAVASCRIPT/App.js"></script>
   </body>
 </html>
