.\.git\Se creo una practica para sumar dos numeros

--- a/Practica1/Templates/Index.html
+++ b/Practica1/Templates/Index.html
@@ -58,13 +58,14 @@
         <div
           id="ImprimirResultado"
           class="alert alert-primary mt-3"
-          role="alert">
+          role="alert"
+        >
           Suma
         </div>
       </div>
     </div>
 
     <!--Script se coloca al final del documento html--->
-    <script src="./../js/app.js"></script>
+    <script src="./../Javascript/App.js"></script>
   </body>
 </html>
