Se creo una practica para calcular el radio de un circulo

--- a/Practica4/Templates/Index.html
+++ b/Practica4/Templates/Index.html
@@ -44,6 +44,6 @@
       </div>
     </div>
 
-    <script src="./../App.js/javascript.js"></script>
+    <script src="./../Javascript/App.js"></script>
   </body>
 </html>
