Se realizo una practica para calcular el promedio de un alumno

--- a/PromedioCalificaciones/Templates/Index.html
+++ b/PromedioCalificaciones/Templates/Index.html
@@ -91,6 +91,6 @@
       </div>
     </div>
 
-    <script src="./../App.js/App.js"></script>
+    <script src="./../Javascript/App.js"></script>
   </body>
 </html>
