--- a/Practica2/Templates/Index.html
+++ b/Practica2/Templates/Index.html
@@ -16,34 +16,41 @@
     <h1 class="text-center mt-2">La brocha gorda</h1>
 
     <div class="container">
-        <div class="jumbotron mt-2">
-          <div class="row">
-            <div class="col-12">
-              <div class="form-group">
-                <label for="">Ingrese los metros cuadrados</label>
-                <input type="number" class="form-control" placeholder="Digite los metros cuadrados">
-              </div>
+      <div class="jumbotron mt-2">
+        <div class="row">
+          <div class="col-12">
+            <div class="form-group">
+              <label for="">Ingrese los metros cuadrados</label>
+              <input
+                type="number"
+                class="form-control"
+                placeholder="Digite los metros cuadrados"
+              />
             </div>
           </div>
-
-          <div class="row">
-            <div class="col-12">
-              <div class="form-group">
-                  <label for="">Ingrese la cantidad de pintura</label>
-                  <input type="number" class="form-control" placeholder="Digite los metros cuadrados">
-              </div>
-            </div>
-          </div>
-        
-          <div class="row">
-            <div class="col12">
-              <div class="btn btn-outline-info">Calcular mano de obra</div>
-            </div>
-          </div>
-
-          .alert
-
         </div>
+
+        <div class="row">
+          <div class="col-12">
+            <div class="form-group">
+              <label for="">Ingrese la cantidad de pintura</label>
+              <input
+                type="number"
+                class="form-control"
+                placeholder="Digite los metros cuadrados"
+              />
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col12">
+            <div class="btn btn-outline-info">Calcular mano de obra</div>
+          </div>
+        </div>
+
+        <div class="alert alert primary">Calculo en metros</div>
+      </div>
     </div>
 
     <script src="./../JS/App.js"></script>
