--- a/Recorrido Distancia/Templates/Index.html
+++ b/Recorrido Distancia/Templates/Index.html
@@ -1,19 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recorrido Distancia</title>
-</head>
-<body>
-    
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
     <h1 class="text-center mt-2">Recorrido Distancia de una automovil</h1>
-    
-    <div class="container">
-        <div class="jumbotron">
 
+    <div class="container">
+      <div class="jumbotron">
+        <div class="row">
+          <div class="col-12">
+            <label for="">Rapidez recorrida en m/s</label>
+            <input id="rapreco" type="number" class="form-control" />
+          </div>
         </div>
+
+        <div class="row">
+          <div class="col-12">
+            <label for="">Tiempo recorrido en seg</label>
+            <input id="tiemporec" type="number" class="form-control" />
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12">
+            <button class="btn btn-outline-info form-control mt-3" id="CalcularDistancia">
+              Calcular la distancia
+            </button>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12">
+            <div
+              id="Imprimirdistancia"
+              class="alert alert-primary form-control mt-3"
+            >
+              Calcular la distancia
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    
-</body>
+    <script src="./../Javascript/App.js"></script>
+  </body>
 </html>
