Se creo una practica para las calificaciones

--- a/PromedioCalificaciones/Templates/Index.html
+++ b/PromedioCalificaciones/Templates/Index.html
@@ -22,7 +22,7 @@
             <input
               id="matriculas"
               type="number"
-              class="col-"
+              class="col-2"
               placeholder="Matricula"
             />
           </div>
