--- a/Practica1/Templates/Index.html
+++ b/Practica1/Templates/Index.html
@@ -50,7 +50,7 @@
         <div class="row">
           <div class="col-12">
             <button class="btn btn-outline-info btn-block" id="btnCalcular">
-              Calcular resultado
+              Calcular suma
             </button>
           </div>
         </div>
