--- a/Practica2/Templates/Index.html
+++ b/Practica2/Templates/Index.html
@@ -24,7 +24,7 @@
               <input
                 id="largewall"
                 type="number"
-                placeholder="Ingrese el largo de la pared"
+                placeholder=" Largo de la pared"
               />
             </div>
           </div>
@@ -35,30 +35,38 @@
               <input
                 id="widthwall"
                 type="number"
-                placeholder="Digite los metros cuadrados"
+                placeholder="Ancho de la pared"
               />
             </div>
           </div>
 
           <div class="col-4">
             <div class="form-group">
-              <label for="">Ingrese el ancho de la pared</label>
-              <input
-                id="cost"
-                type="number"
-                placeholder="Digite los metros cuadrados"
-              />
+              <label for="">Ingrese el costo por m2</label>
+              <input id="cost" type="number" placeholder="Metros cuadrados" />
             </div>
           </div>
         </div>
 
         <div class="row">
           <div class="col-12">
-            <div id="Calcularmetros" class="btn btn-outline-info form-control mt-2">Calcular cotizacion </div>
+            <div id="Calcularmetros" class="btn btn-outline-success btn-block">
+              Calcular cotizacion
+            </div>
           </div>
         </div>
 
-        <div id="imprimirresul" class="alert alert primary form-control mt-2">Calculo en metros</div>
+        <div class="row">
+          <div class="col-12">
+            <label for="" class="mt-2">Resultado en pesos:</label>
+            <div
+              id="imprimirresul"
+              class="alert alert-success m-2"
+              role="alert"
+            >
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
