Se creo una practica para el area de un triangulo

--- a/Practica3/Templates/Index.html
+++ b/Practica3/Templates/Index.html
@@ -45,18 +45,22 @@
 
         <div class="row">
           <div class="col-12">
-            <div id="boton" class="btn btn-outline-info btn-block">
+            <div id="boton" class="btn btn-outline-success btn-block">
               Calcular área
             </div>
           </div>
         </div>
 
-        <div
-          id="ImprimirResultado"
-          class="alert alert-primary mt-3"
-          role="alert"
-        >
-          Resultado del área del triangulo
+        <div class="row">
+          <div class="col-12">
+            <label class="mt-2" for="">El resultado del área del triangulo es:</label>
+            <div
+              id="ImprimirResultado"
+              class="alert alert-success mt-3"
+              role="alert"
+            >
+          </div>
+        </div>
         </div>
       </div>
     </div>
@@ -64,4 +68,3 @@
     <script src="./../JAVASCRIPT/App.js"></script>
   </body>
 </html>
-
