--- a/Practica4/Templates/Index.html
+++ b/Practica4/Templates/Index.html
@@ -33,13 +33,17 @@
         <div class="row">
           <div class="col-12">
             <button id="Calcularpi" class="btn btn-outline-info btn-block">
-              Calcula área
+              Calcular radio
             </button>
           </div>
         </div>
 
-        <div id="ImprimirResultado" class="alert alert-primary alert mt-3">
-          Imprimir radio
+        <div class="row">
+          <div class="col-12">
+            <label for="" class="mt-2">El radio de un circulo es:</label>
+            <div id="ImprimirResultado" class="alert alert-primary mt-2" role="alert">
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -47,4 +51,3 @@
     <script src="./../Javascript/App.js"></script>
   </body>
 </html>
-
